--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
 raw README
-Release version: 0.1.0 (Apr 21 2004)
+Release version: 0.1.1 (May 15 2004)
 -------------------------------------------------------------------------------
 
 About:
@@ -12,8 +12,7 @@ written by Eric Chahi at the beginning of the '90s. More information can be
 found here : http://www.mobygames.com/game/sheet/p,2/gameId,564/.
 
 Please be aware that, currently, this implementation may contains bugs and 
-non-implemented features that make it impossible to finish the game. Other 
-missing stuff is sound.
+non-implemented features that make it impossible to finish the game.
 
 Supported Versions:
 -------------------
@@ -30,25 +29,25 @@ Running:
 --------
 
 You will need the original files, here is the required list :
-	BANK*
-	MEMLIST.BIN
+    BANK*
+    MEMLIST.BIN
 	
 To start the game, you can either :
 - put the game's datafiles in the same directory as the executable
 - use the --datapath command line option to specify the datafiles directory
 
 Here are the various in game hotkeys :
-	Arrow Keys		allow you to move Lester
-	Enter/Space		allow you run/shoot with your gun
-	C				allow to enter a code to jump at a specific level
-	P				pause the game
-	Alt X			exit the game
-	Ctrl S			save game state
-	Ctrl L			load game state
-	Ctrl + and -	change game state slot
-	Ctrl F			toggle fast mode
-  	Alt Enter		toggle windowed/fullscreen mode
-  	Alt + and - 	change scaler factor
+    Arrow Keys      allow you to move Lester
+    Enter/Space     allow you run/shoot with your gun
+    C               allow to enter a code to jump at a specific level
+    P               pause the game
+    Alt X           exit the game
+    Ctrl S          save game state
+    Ctrl L          load game state
+    Ctrl + and -    change game state slot
+    Ctrl F          toggle fast mode
+    Alt Enter       toggle windowed/fullscreen mode
+    Alt + and -     change scaler factor
 
 Credits:
 --------
