--- a/README
+++ b/README
@@ -1,60 +1,35 @@
 
-raw README
-Release version: 0.1.1 (May 15 2004)
+Another World GP32/DC
+Release Date: May 14 2005
 -------------------------------------------------------------------------------
 
 About:
 ------
 
-raw is a re-implementation of the engine used in the game Another World. This 
-game, released under the name Out Of This World in non-European countries, was 
-written by Eric Chahi at the beginning of the '90s. More information can be 
-found here : http://www.mobygames.com/game/sheet/p,2/gameId,564/.
+Information about this legendary game can be found here [1] and [2].
+Use aw_gp32.fxe for "regular" GP32 and GP32 FLU/BLU.
+Use aw_gp32p.fxe only for GP32 BLUP.
 
-Please be aware that, currently, this implementation may contains bugs and 
-non-implemented features that make it impossible to finish the game.
-
-Supported Versions:
--------------------
-
-Currently, only the english PC DOS version is supported ("Out of this World").
-
-Compiling:
-----------
-
-Tweak the Makefile if needed and type make (only gcc3 has been tested so far).
-The SDL and zlib libraries are required.
-
-Running:
+Hotkeys:
 --------
 
-You will need the original files, here is the required list :
-    BANK*
-    MEMLIST.BIN
-	
-To start the game, you can either :
-- put the game's datafiles in the same directory as the executable
-- use the --datapath command line option to specify the datafiles directory
-
-Here are the various in game hotkeys :
-    Arrow Keys      allow you to move Lester
-    Enter/Space     allow you run/shoot with your gun
-    C               allow to enter a code to jump at a specific level
-    P               pause the game
-    Alt X           exit the game
-    Ctrl S          save game state
-    Ctrl L          load game state
-    Ctrl + and -    change game state slot
-    Ctrl F          toggle fast mode
-    Alt Enter       toggle windowed/fullscreen mode
-    Alt + and -     change scaler factor
+    D-pad         allow you to move Lester
+    A/B           allow you run/shoot with your gun
+    select        allow to enter a code to jump at a specific level
+    start         pause the game
+    select+start  exit the game
 
 Credits:
 --------
 
-Eric Chahi, obviously, for making this great game.
+Original game by Eric Chahi and Jean-Francois Freitas
+Interpreter code by Gregory Montoir [3]
+GP32 Port by Philippe Simons
+Dreamcast Port by Mickey McMurray
+GP32 Sound Engine code by mr.spiv
 
-Contact:
---------
-
-Gregory Montoir, cyx@users.sourceforge.net
+URLs:
+-----
+[1] http://www.mobygames.com/game/out-of-this-world
+[2] http://en.wikipedia.org/wiki/Another_World_(video_game)
+[3] http://membres.lycos.fr/cyxdown/raw
